Addition mobile version fixes

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,7 +4,7 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url(/website/fonts/NeueMontreal-Regular.otf) format("opentype");
+  src: url(/fonts/NeueMontreal-Regular.otf) format("opentype");
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Bold';
-  src: url(/website/fonts/NeueMontreal-Bold.otf) format("opentype");
+  src: url(/fonts/NeueMontreal-Bold.otf) format("opentype");
 }
 
 
